# court-pipeline

./: .dockerignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
court_pipeline/extractors/: base.py  boxscore_summary_extractor.py  scoreboard_extractor.py
court_pipeline/proxy/: __init__.py  base.py  boxscore_summary.py  constants.py  scoreboard.py
court_pipeline/s3/: base.py  boxscore_summary.py  scoreboard.py
court_pipeline/utils/: game_id.py
scripts/: validate-commit-msg.sh
tests/fixtures/: 0022400001.json  2025-11-23.json
tests/test_extractors/: test_base.py  test_boxscore_summary_extractor.py  test_scoreboard_extractor.py
tests/test_proxy/: test_base.py  test_boxscore_summary.py  test_scoreboard.py
tests/test_s3/: test_base.py  test_boxscore_summary.py  test_scoreboard.py
tests/test_utils/: __init__.py  test_game_id.py
