[tool.poetry]
name = "court-pipeline"
version = "0.0.1"
description = "Data pipeline for historical basketball statistics"
authors = ["Chaojie Yan <ushareroses@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"

[tool.poetry.group.dev.dependencies]
ipython = "9.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
