[tool.poetry]
name = "court-pipeline"
version = "0.0.1"
description = "Data pipeline for historical basketball statistics"
authors = ["Chaojie Yan <ushareroses@gmail.com>"]
readme = "README.md"
packages = [{include = "court_pipeline"}]

[tool.poetry.dependencies]
python = "^3.14"
httpx = "0.28.1"

[tool.poetry.group.dev.dependencies]
ipython = "9.7.0"
pre-commit = "4.4.0"
pytest = "9.0.1"
pytest-asyncio = "1.3.0"
pytest-cov = "7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
